--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 html::-webkit-scrollbar{
 	width: 1vw;
 }
@@ -74,7 +73,7 @@ body{
     text-decoration: none;
     font-size: 1.2rem;
     color: white;
-    font-family: sans-serif;
+    font-family: monospace;
     box-shadow: none;
     transition:  border-bottom 0.5s ;
 }
@@ -178,7 +177,7 @@ main section:nth-child(2n){
     width: 100%;
     margin: auto;
     text-align: justify;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: monospace;
     font-weight: 500;
     font-size: 1.4375rem;
     color: grey;
@@ -235,8 +234,8 @@ main section:nth-child(2n){
     align-content: space-around;
 }
 .Portfolio div div{
-    width: 200px;
-    height: 200px; 
+    width: 400px;
+    height: 400px; 
     display: flex;
     flex-direction: column;
     justify-content: center;
